SET_LIST/NEW still making....

--- a/APPLI/SET_LIST/NEW/HTML/OPERATION/RECORDS.HTML
+++ b/APPLI/SET_LIST/NEW/HTML/OPERATION/RECORDS.HTML
@@ -2,9 +2,10 @@
 <!--<html>-->
 <!--SET LISTS Records-->
 
-<!--RECORDS-->
+<!--RECORDS_OPERATION-->
 <!-- R1 -->
 <tr id="edit-row-%1">
+
     <td>
         <span class="label label-default">%1</span>
     </td>
@@ -83,6 +84,6 @@
         <a class="btn btn-danger btn-sm btn-operation" id="OPERATION_DELETE_%1">DELETE</a>
     </td>
 </tr>
-<!--RECORDS-->
+<!--RECORDS_OPERATION-->
 
 <!--</html>-->
