SET_LIST/NEW done.

--- a/APPLI/SET_LIST/NEW/HTML/CONFIRM/INPUT.HTML
+++ b/APPLI/SET_LIST/NEW/HTML/CONFIRM/INPUT.HTML
@@ -57,7 +57,7 @@
         frm.submit();
     });
 
-    //ADD.EDIT.DELETEボタン
+    //COMPLETEボタン
     $(document).on('click', 'a.btn-set', function() {
 
         //仮登録の登録・更新・削除
