--- a/APPLI/SET_LIST/NEW/HTML/CONFIRM/TABLE.HTML
+++ b/APPLI/SET_LIST/NEW/HTML/CONFIRM/TABLE.HTML
@@ -41,7 +41,7 @@
             </td>           
             <td>
                 <!--Confirmボタン-->
-                <a class="btn btn-primary btn-lg btn-set" id="OPERATION_SET_NEW">CONFIRM</a>
+                <a class="btn btn-primary btn-lg btn-set" id="SET_COMPLETE">COMPLETE</a>
             </td>           
         </tr>
    </tbody>
