--- a/APPLI/SET_LIST/NEW/HTML/OPERATION/RECORDS.HTML
+++ b/APPLI/SET_LIST/NEW/HTML/OPERATION/RECORDS.HTML
@@ -35,8 +35,8 @@
         <div class="form-group">
             <div class="btn-group">
                 <div class="btn-group">
-                    <div id="dropdown-operation-%1" class="btn-group">
-                        <button type="button" class="btn dropdown-toggle input-sm" id="operation_%1" data-toggle="dropdown" aria-expended="false">
+                    <div id="dropdown-operation-%1" class="btn-group" name="OPERATION" >
+                        <button type="button" class="btn dropdown-toggle input-sm operation" id="operation_%1" data-toggle="dropdown" aria-expended="false">
                             <span class="caret"></span>
                         </button>
                         <ul id="dropdown-operation-list-%1" class="dropdown-menu" role="menu" name="%1">
