--- a/APPLI/SET_LIST/NEW/HTML/PARTS/RECORDS.HTML
+++ b/APPLI/SET_LIST/NEW/HTML/PARTS/RECORDS.HTML
@@ -34,8 +34,8 @@
         <div class="form-group">
             <div class="btn-group">
                 <div class="btn-group">
-                    <div id="dropdown-parts-%1" class="btn-group">
-                        <button type="button" class="btn dropdown-toggle input-sm" id="parts_%1" data-toggle="dropdown" aria-expended="false">
+                    <div id="dropdown-parts-%1" class="btn-group" name="PARTS">
+                        <button type="button" class="btn dropdown-toggle input-sm parts" id="parts_%1" data-toggle="dropdown" aria-expended="false">
                             <span class="caret"></span>
                         </button>
                         <ul id="dropdown-parts-list-%1" class="dropdown-menu" role="menu" name="%1">
