--- a/APPLI/SET_LIST/LISTS/HTML/TABLE.HTML
+++ b/APPLI/SET_LIST/LISTS/HTML/TABLE.HTML
@@ -7,13 +7,10 @@
             <th>NO</th>
             <th>SET CATEGORY</th>
             <th>SET NAME</th>
-            <th>PARTS QTY</th>
+            <th>SET PRICE</th>
             <th>REMARKS</th>
-            <th></th>
             <th>
-                <td>
-                    <a class="btn btn-success btn-sm btn-set" id="SET_NEW">NEW</a>
-                </td>
+                <a class="btn btn-success btn-sm btn-set-new" id="SET_NEW">NEW</a>
             </th>
         </tr>
     </thead>
