--- a/APPLI/SET_LIST/LISTS/HTML/RECORDS.HTML
+++ b/APPLI/SET_LIST/LISTS/HTML/RECORDS.HTML
@@ -18,7 +18,7 @@ l
         <div class="edit">
             <div class="form-group">
                 <input type="text" name="SET_CATEGORY_NM_%2" id="SET_CATEGORY_NM_%2" value="%4" class="form-control input-sm" disabled />
-                <input type="hidden" name="SET_CATEGORY_NO_HID_%2" id="CATEGORY_NO_HID_%2" value="%3" class="form-control" disabled=disabled/>
+                <input type="hidden" name="SET_CATEGORY_NO_HID_%2" id="SET_CATEGORY_NO_HID_%2" value="%3" class="form-control" disabled=disabled/>
             </div>
         </div>
     </td>
