--- a/APPLI/SET_LIST/EDIT/HTML/SET/INPUT.HTML
+++ b/APPLI/SET_LIST/EDIT/HTML/SET/INPUT.HTML
@@ -52,6 +52,22 @@
         frm.submit();
     });
 
+    //カテゴリを選択
+    $(document).on('click', 'a.category-list', function() {
+
+        //選択した部品のidから行を取得する
+        var idname = $(this).attr("id"); 
+        var list_id = idname.split("_");
+        var row = $(this).parent().parent().attr("name");
+        var cat_no = list_id[2];
+        var choice = $(this).text();
+
+        //該当のレコードに選択したカテゴリ名を設定
+        $('#SET_CATEGORY_NM_' + row).val(choice);
+        $('#SET_CATEGORY_NO_HID_' + row).val(cat_no);
+
+    });
+
     //EDITボタン
     $(document).on('click', 'a.btn-set', function() {
 
