--- a/APPLI/SET_LIST/EDIT/HTML/SET/TABLE.HTML
+++ b/APPLI/SET_LIST/EDIT/HTML/SET/TABLE.HTML
@@ -17,27 +17,13 @@
         <tr>
             <td>ー</td>
             <td>
-                <span class="label label-default">NEW</span>
+                <span class="label label-default">###SET_NO###</span>
             </td>
             
             <!--セットカテゴリ-->
             <td>
-                <div class="form-group">
-                    <div class="btn-group">
-                        <div class="btn-group">
-                            <button type="button" class="btn dropdown-toggle input-sm" id="set_categogy_new" data-toggle="dropdown" aria-expended="false">
-                                <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu SET" role="menu" name="NEW">
-                                ###CATEGORY###
-                            </ul>
-                        </div>
-                        <div class="btn-group">
-                            <input type="text" name="SET_CATEGORY_NM_NEW" id="SET_CATEGORY_NM_NEW" value="###SET_CATEGORY_NM###" class="form-control input-sm" disabled placeholder="セットカテゴリ"/>
-                        </div>
-                    </div>
-                    <input type="hidden" name="SET_CATEGORY_NO_HID_NEW" id="SET_CATEGORY_NO_HID_NEW" value="###SET_CATEGORY_NO###" class="form-control" />
-                </div>
+                <input type="text" name="SET_CATEGORY_NM_NEW" id="SET_CATEGORY_NM_NEW" value="###SET_CATEGORY_NM###" class="form-control input-sm" disabled=disabled placeholder="セットカテゴリ"/>
+                <input type="hidden" name="SET_CATEGORY_NO_HID_NEW" id="SET_CATEGORY_NO_HID_NEW" value="###SET_CATEGORY_NO###" class="form-control" />
             </td>
             <!--セット名-->
             <td>
@@ -51,9 +37,9 @@
             <td>
                 <input type="text" id="SET_REMARKS_NEW" name="SET_REMARKS_NEW" value="###SET_REMARKS###" class="form-control input-sm" style="" placeholder="備考" >
             </td>           
-            <!--NEWボタン-->
+            <!--EDITボタン-->
             <td>
-                <a class="btn btn-primary btn-sm btn-set" id="SET_NEW_NEW">NEW</a>
+                <a class="btn btn-primary btn-sm btn-set" id="SET_EDIT">EDIT</a>
             </td>
         </tr>
    </tbody>
