SET_LIST/EDIT/SET/COMPLETE CGI now on

--- a/APPLI/SET_LIST/EDIT/HTML/SET/INPUT.HTML
+++ b/APPLI/SET_LIST/EDIT/HTML/SET/INPUT.HTML
@@ -48,7 +48,7 @@
         var func = $(this).html().toUpperCase();
         var frm = document.forms['set_list'];
         frm.method = 'GET';
-        frm.action = '/APP/SET_LIST/NEW/' + func + '/INPUT';
+        frm.action = '/APP/SET_LIST/EDIT/' + func + '/INPUT';
         frm.submit();
     });
 
@@ -77,22 +77,59 @@
         var list_id = idname.split("_");
         var action = list_id[1];
         var row = list_id[2];
-      
+
         //値
         var set_category_no = $('#SET_CATEGORY_NO_HID_' + row).val();
+        var set_category_nx = $('#SET_CATEGORY_NX_HID_' + row).val();
         var set_category_nm = $('#SET_CATEGORY_NM_' + row).val();
+        var set_no = $('#SET_NO_' + row).val();
         var set_nm = $('#SET_NM_' + row).val();
+        var set_nm_nx = $('#SET_NM_NX_HID_' + row).val();
         var set_price = $('#SET_PRICE_' + row).val();
+        var set_price_nx = $('#SET_PRICE_NX_HID_' + row).val();
         var set_remarks = $('#SET_REMARKS_' + row).val();
+        var set_remarks_nx = $('#SET_REMARKS_NX_HID_' + row).val();
+
+        //Validation
+        if (!set_category_no) {
+            alert("セットカテゴリが選択されていません。");
+            return;
+        }
+        //Validation
+        if (!set_nm) {
+            alert("セット名が入力されていません。");
+            return;
+        }
+        //Validation
+        if (set_nm.indexOf("&") != -1) {
+            alert("{&}文字は入力出来ません。");
+            return;
+        }
+        //Validation
+        if (!set_price) {
+            alert("セットの金額が入力されていません。");
+            return;
+        }
+        //Validation
+        if (set_category_no == set_category_nx && 
+            set_nm == set_nm_nx &&
+            set_price == set_price_nx &&
+            set_remarks == set_remarks_nx
+          ) {
+            alert("変更箇所がありません。");
+            return;
+        }
 
         //セット名を仮登録
         var jqXHR = $.ajax({
             type: 'POST',
-            url: '/APP/SET_LIST/NEW/SET/COMPLETE',
+            url: '/APP/SET_LIST/EDIT/SET/COMPLETE',
             data: {
               ROW: row,
               SET_CATEGORY_NO: set_category_no,
+              SET_CATEGORY_NX: set_category_nx,
               SET_CATEGORY_NM: set_category_nm,
+              SET_NO: set_no,
               SET_NM: set_nm,
               SET_PRICE: set_price,
               SET_REMARKS: set_remarks
@@ -100,12 +137,11 @@
         });
         jqXHR.done(function(data) {
             if (data == 2222) {
-                alert("入力したセット名はすでに登録されています。");
+                alert("セット名:" + set_nm + "は、既に使用されています。");
             } else {
                 $('intput[type="text"]').each(function() {
                 });
                 alert("セット名を仮登録しました。");
-                location.href = '/APP/SET_LIST/NEW/OPERATION/INPUT';
             }
         });
         jqXHR.fail(function(data) {
