--- a/APPLI/SET_LIST/EDIT/HTML/SET/TABLE.HTML
+++ b/APPLI/SET_LIST/EDIT/HTML/SET/TABLE.HTML
@@ -13,33 +13,38 @@
         </tr>
     </thead>
     <tbody>
-        <!--NEW セット新規追加-->
+        <!--EDIT セット変更-->
         <tr>
             <td>ー</td>
             <td>
                 <span class="label label-default">###SET_NO###</span>
+                <input type="hidden" name="SET_NO_HID_EDIT" id="SET_NO_HID_EDIT" value="###SET_NO###" class="form-control" />
             </td>
             
             <!--セットカテゴリ-->
             <td>
-                <input type="text" name="SET_CATEGORY_NM_NEW" id="SET_CATEGORY_NM_NEW" value="###SET_CATEGORY_NM###" class="form-control input-sm" disabled=disabled placeholder="セットカテゴリ"/>
-                <input type="hidden" name="SET_CATEGORY_NO_HID_NEW" id="SET_CATEGORY_NO_HID_NEW" value="###SET_CATEGORY_NO###" class="form-control" />
+                <input type="text" name="SET_CATEGORY_NM_EDIT" id="SET_CATEGORY_NM_EDIT" value="###SET_CATEGORY_NM###" class="form-control input-sm" disabled=disabled placeholder="セットカテゴリ"/>
+                <input type="hidden" name="SET_CATEGORY_NO_HID_EDIT" id="SET_CATEGORY_NO_HID_EDIT" value="###SET_CATEGORY_NO###" class="form-control" />
+                <input type="hidden" name="SET_CATEGORY_NX_HID_EDIT" id="SET_CATEGORY_NX_HID_EDIT" value="###SET_CATEGORY_NO###" class="form-control" />
             </td>
             <!--セット名-->
             <td>
-                <input type="text" id="SET_NM_NEW" name="SET_NM_NEW" value="###SET_NM###" class="form-control input-sm" style="" placeholder="セット名" >
+                <input type="text" id="SET_NM_EDIT" name="SET_NM_EDIT" value="###SET_NM###" class="form-control input-sm" style="" placeholder="セット名" >
+                <input type="hidden" name="SET_NM_NX_HID_EDIT" id="SET_NM_NX_HID_EDIT" value="###SET_NM###" class="form-control" />
             </td>
              <!--セット価格-->
             <td>
-                <input type="number" id="SET_PRICE_NEW" name="SET_PRICE_NEW" value="###SET_PRICE###" class="form-control input-sm" style="" placeholder="セット税抜価格" >
+                <input type="number" id="SET_PRICE_EDIT" name="SET_PRICE_EDIT" value="###SET_PRICE###" class="form-control input-sm" style="" placeholder="セット税抜価格" >
+                <input type="hidden" name="SET_PRICE_NX_HID_EDIT" id="SET_PRICE_NX_HID_EDIT" value="###SET_PRICE###" class="form-control" />
             </td>
              <!--備考-->
             <td>
-                <input type="text" id="SET_REMARKS_NEW" name="SET_REMARKS_NEW" value="###SET_REMARKS###" class="form-control input-sm" style="" placeholder="備考" >
+                <input type="text" id="SET_REMARKS_EDIT" name="SET_REMARKS_EDIT" value="###SET_REMARKS###" class="form-control input-sm" style="" placeholder="備考" >
+                <input type="hidden" name="SET_REMARKS_NX_HID_EDIT" id="SET_REMARKS_NX_HID_EDIT" value="###SET_REMARKS###" class="form-control" />
             </td>           
             <!--EDITボタン-->
             <td>
-                <a class="btn btn-primary btn-sm btn-set" id="SET_EDIT">EDIT</a>
+                <a class="btn btn-primary btn-sm btn-set" id="SET_EDIT_EDIT">EDIT</a>
             </td>
         </tr>
    </tbody>
