--- a/APPLI/SET_LIST/EDIT/HTML/SET/TABLE.HTML
+++ b/APPLI/SET_LIST/EDIT/HTML/SET/TABLE.HTML
@@ -3,8 +3,7 @@
 <table class="table" style="font-size:12px;">
     <thead>
         <tr>
-            <th>#</th>
-            <th>NO</th>
+            <th>SET NO</th>
             <th>SET CATEGORY</th>
             <th>SET NAME</th>
             <th>SET PRICE</th>
@@ -15,7 +14,6 @@
     <tbody>
         <!--EDIT セット変更-->
         <tr>
-            <td>ー</td>
             <td>
                 <span class="label label-default">###SET_NO###</span>
                 <input type="hidden" name="SET_NO_HID_EDIT" id="SET_NO_HID_EDIT" value="###SET_NO###" class="form-control" />
